Change Log:
=============================
- DanbooruDownloader20161002
  - Fix Issue #60: Handle undefined xml entity.
  - Fix thumbnail resize if thumb size bigger than column size.
  - Implement #86: Shutdown after batch job completed.
  - Add new provider: rule34hentai.net.

- DanbooruDownloader20160816
  - Implement #79: Add option to allow filepath exceeding 260 characters.
  - Implement #80: Create extra text file containing tags.
  - Fix Issue #77: Update provider list.
  - Update readme.txt

- DanbooruDownloader20160117
  - Fix Issue #70: Update url handler for rule34.xxx
  - Fix Issue #68: Update gelbooru tags downloader, need cookie for login.

- DanbooruDownloader20151203
  - Fix Issue #64: Add warning when file exists.
  - Fix Issue #66: Empty folder created for Blacklisted tag when use custom filename.
  - Implement Feature #67: Option to replace underscore in Tag to space
  - Add Context Menu to open downloaded files.
  - Set max width for data grid column to 300px.
  - Add cookie login method for Gelbooru. Deprecate the UseAuth, replace with LoginType.

- DanbooruDownloader20151012
  - Fix Issue #62: Refresh image size on start.
  - Fix Issue #63: Shimmie rss page batch bug.
  - Add null check if tags.xml is empty (xml must be valid!)
  - Update sankaku parser to parse tags directly from post (Global Tags XML must not be ticked).

- DanbooruDownloader20150923
  - Fix Issue#58: Add scroll bar on main window.
  - Fix Issue#61: remove limit parameter for sankakucomplex.
  - Add option to replace empty tag with default value.

- DanbooruDownloader20150429
  - Implement Feature #51: Allow option to ignore/blacklist only for General tags.
  - Fix Issue #57: Replace tags if over the limit with 'multiple_tag_type'.
  - Implement Feature #57: Take tags only the specified limit option.

- DanbooruDownloader20150116
  - Add option to disable list file generation of downloaded images (Issue #53).
  - Update message for Batch Job (Issue #48).
