@@ -10,7 +10,7 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Nandaka")]
 [assembly: AssemblyProduct("DanbooruDownloader3")]
-[assembly: AssemblyCopyright("Copyright © Nandaka 2012")]
+[assembly: AssemblyCopyright("Copyright © Nandaka 2016")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
@@ -32,5 +32,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("3.2016.10.02")]
-[assembly: AssemblyFileVersion("3.2016.10.02")]
+[assembly: AssemblyVersion("3.2016.10.08")]
+[assembly: AssemblyFileVersion("3.2016.10.08")]
